Update to use CommanderJS; first e2e Eth -> Arb working with PYUSD

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # Required: Your private key for signing transactions
-PYUSD_PRIVATE_KEY=0x...
+PRIVATE_KEY=0x...
 
 # Optional: Custom RPC endpoints (defaults to public RPCs)
-PYUSD_RPC_ETHEREUM=https://eth-mainnet.g.alchemy.com/v2/YOUR_KEY
-PYUSD_RPC_ARBITRUM=https://arb-mainnet.g.alchemy.com/v2/YOUR_KEY
-PYUSD_RPC_POLYGON=https://polygon-mainnet.g.alchemy.com/v2/YOUR_KEY
+RPC_ETHEREUM=https://eth-mainnet.g.alchemy.com/v2/YOUR_KEY
+RPC_ARBITRUM=https://arb-mainnet.g.alchemy.com/v2/YOUR_KEY
+RPC_POLYGON=https://polygon-mainnet.g.alchemy.com/v2/YOUR_KEY
