--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,23 +1,16 @@
-name: tests
+name: CI
+
 on:
   push:
     branches-ignore: [main]
   workflow_dispatch:
 
 jobs:
-  unit-tests:
-    strategy:
-      matrix:
-        os: ['ubuntu-latest', 'windows-latest']
-        node_version: [lts/-1, lts/*, latest]
-      fail-fast: false
-    runs-on: ${{ matrix.os }}
+  lint-and-build:
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: ${{ matrix.node_version }}
-          cache: npm
+      - uses: jdx/mise-action@v2
       - run: npm install
+      - run: npm run lint
       - run: npm run build
-      - run: npm run test
