--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,7 @@
     "target": "ES2022",
     "skipLibCheck": true,
     "esModuleInterop": true,
-    "resolveJsonModule": true,
-    "noEmit": true
+    "resolveJsonModule": true
   },
   "include": ["./src/**/*", "./bin/**/*"]
 }
