--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "@commander-js/extra-typings": "^14.0.0",
     "@layerzerolabs/lz-v2-utilities": "^3.0.152",
+    "@solana/web3.js": "^1.98.4",
     "chalk": "^5.4.1",
     "commander": "^14.0.0",
     "ora": "^9.0.0",
+    "tronweb": "^6.1.1",
     "viem": "^2.43.5"
   },
   "devDependencies": {
