--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@commander-js/extra-typings": "^14.0.0",
     "@layerzerolabs/lz-v2-utilities": "^3.0.152",
+    "@solana/spl-token": "^0.4.14",
     "@solana/web3.js": "^1.98.4",
     "bip39": "^3.1.0",
     "bs58": "^6.0.0",
